--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.3",
+    "@types/mongoose": "^5.7.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.3",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
