--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.3",
     "@types/mongoose": "^5.7.3",
+    "@types/redis": "^2.8.16",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
